[package]
edition = "2021"
name = "autograder"
resolver = "2"
version = "0.1.0"

[dependencies]
axum = "0.6"
bcrypt = "0.15"
bytes = "1"
ciborium = "0.2"
cookie = { version = "0.17", features = ["percent-encode"] }
hex = "0.4"
humansize = "2"
mail-builder = "0.3"
mail-send = { version = "0.4", default_features = false, features = [
	"builder",
] }
maud = { git = "https://github.com/mattfbacon/maud", features = ["axum"] }
once_cell = "1"
percent-encoding = "2"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
temp-dir = "0.1"
thiserror = "1"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["rt", "macros", "sync", "process"] }
toml = "0.8"
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
